--- a/my-portfolio/src/pages/Home.css
+++ b/my-portfolio/src/pages/Home.css
@@ -5,6 +5,13 @@
   margin-top: 5em;
 }
 
+@media (max-width: 1024px) {
+  .hero-text {
+    font-size: 16px;
+    width: 22.5em;
+  }
+}
+
 .hero-pic {
   height: 40em;
 }
