--- a/my-portfolio/src/pages/Home.css
+++ b/my-portfolio/src/pages/Home.css
@@ -6,9 +6,14 @@
 }
 
 @media (max-width: 1024px) {
+  .hero-name {
+    margin-left: 0.5em;
+  }
+
   .hero-text {
     font-size: 16px;
     width: 22.5em;
+    margin-left: 2em;
   }
 }
 
