--- a/my-portfolio/src/pages/Home.css
+++ b/my-portfolio/src/pages/Home.css
@@ -1,30 +1,36 @@
-.hero-section {
+.nav-bar {
   display: grid;
-  align-items: center;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-  margin-top: 5em;
+  font-size: 100px;
+  margin-top: 150px;
 }
 
-@media (max-width: 1024px) {
-  .hero-name {
-    margin-left: 0.5em;
-  }
-
-  .hero-text {
-    font-size: 16px;
-    width: 22.5em;
-    margin-left: 2em;
-  }
-}
-
-.hero-pic {
-  height: 40em;
-}
-
-.hero-name {
+.typewriter {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.05em solid blue; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 1; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.15em; /* Adjust as needed */
+  animation: typing 2.5s steps(40, end), blink-caret 0.75s step-end infinite;
   font-size: 50px;
 }
 
-.hero-text {
-  margin-right: 7em;
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
 }
