--- a/my-portfolio/src/pages/Home.css
+++ b/my-portfolio/src/pages/Home.css
@@ -1,10 +1,6 @@
-.nav-bar {
-  display: grid;
-  font-size: 100px;
-  margin-top: 150px;
-}
-
 .typewriter {
+  display: flex;
+  justify-content: center;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: 0.05em solid blue; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
